--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
   margin: 0;
+  background-color: #272727;
 }
 
 html {
@@ -24,12 +25,14 @@ main {
 
 main section {
   height: calc(100vh - 20px);
-  background-color: #d4d4d4;
+  background-color: #4b4b4b;
   padding: 0 20px;
+  border-radius: 5px;
 }
 
 main section h1 {
   font-size: 3rem;
+  color: white;
 }
 
 main .cards {
@@ -48,6 +51,8 @@ main .card .top {
   background-color: white;
   padding: 20px;
   padding-bottom: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 main .card .top h2 {
@@ -114,6 +119,8 @@ main .card .bottom {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 main .card .bottom p {
@@ -126,7 +133,7 @@ main .card .bottom .material-icons {
 }
 
 main #add {
-  background-color: white;
+  background-color: transparent;
 }
 
 form {
@@ -142,6 +149,7 @@ form fieldset legend {
   font-weight: bold;
   padding: 0;
   margin-bottom: 10px;
+  color: white;
 }
 
 form fieldset label,
@@ -150,12 +158,10 @@ form fieldset input {
 }
 
 form fieldset label {
-  margin-bottom: 0;
+  margin-bottom: 3px;
   margin-left: 0;
   color: grey;
-  font-size: 1.1rem;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
+  font-size: 1.2rem;
 }
 
 form fieldset input,
@@ -164,18 +170,62 @@ form fieldset select {
   margin-bottom: 20px;
   width: 100%;
   height: 40px;
-  border: 1px solid grey;
-  font-size: 1.1rem;
+  padding-left: 10px;
+  border: none;
+  font-size: 1.4rem;
+  background-color: #4b4b4b;
+  color: white;
+  border-radius: 5px;
+}
+
+form fieldset textarea {
+  padding-top: 10px;
+  height: 80px;
 }
 
 form fieldset input:focus,
 form fieldset textarea:focus,
 form fieldset select:focus {
   outline: none;
-  border: 1px solid blue;
 }
 
-form fieldset input:valid {
+form fieldset .add-new {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 50%;
+  height: 40px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: green;
+  color: white;
+  border-radius: 5px;
+}
+
+form fieldset .add-new:disabled {
+  background-color: #4b4b4b;
+  color: #b8b8b8;
+  cursor: default;
+}
+
+form fieldset .valid {
   border: 1px solid green;
+}
+
+form fieldset .invalid {
+  border: 1px solid red;
+}
+
+form fieldset .error {
+  color: white;
+  margin-top: -24px;
+  margin-bottom: 20px;
+  background-color: red;
+  padding: 7px;
+  z-index: 10;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
