--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --card-color: white;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -44,39 +48,25 @@ main .cards {
 
 main .card {
   margin-bottom: 10px;
-}
-
-main .card .top {
   position: relative;
   background-color: white;
   padding: 20px;
-  padding-bottom: 5px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 5px;
+  border-bottom: 5px solid white;
 }
 
-main .card .top h2 {
-  margin-top: 0;
-  font-size: 2rem;
-  margin-bottom: 5px;
-}
-
-main .card .top p {
-  font-weight: 300;
-  margin: 5px 0;
+main .card h2 {
+  margin: 0;
   font-size: 1.6rem;
+  font-weight: 300;
+  width: 80%;
+  cursor: pointer;
 }
 
-main .card .top .creator {
-  font-style: italic;
-  font-size: 1.2rem;
-  margin-top: 15px;
-}
-
-main .card .top .delete-this {
+main .card .delete-this {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 5px;
+  right: 5px;
   background-color: transparent;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -84,9 +74,14 @@ main .card .top .delete-this {
   border: none;
   outline: none;
   cursor: pointer;
+  padding: 0;
 }
 
-main .card .top .card-nav {
+main .card .delete-this span {
+  font-size: 15px;
+}
+
+main .card .card-nav {
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -95,44 +90,21 @@ main .card .top .card-nav {
   display: flex;
 }
 
-main .card .top .card-nav span {
+main .card .card-nav span {
   cursor: pointer;
 }
 
-main .card .top .card-nav .visible {
+main .card .card-nav .visible {
   opacity: 1;
   cursor: pointer;
 }
 
-main .card .top .card-nav .hidden {
+main .card .card-nav .hidden {
   opacity: 0;
   cursor: default;
 }
 
-main .card .bottom {
-  background-color: #F1F1F1;
-  padding: 30px 20px;
-  font-weight: 300;
-  font-size: 1.6rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-
-main .card .bottom p {
-  margin: 0;
-}
-
-main .card .bottom .material-icons {
-  -webkit-transform: translateY(6px);
-          transform: translateY(6px);
-}
-
-main #add {
+#add {
   background-color: transparent;
 }
 
@@ -176,6 +148,18 @@ form fieldset select {
   background-color: #4b4b4b;
   color: white;
   border-radius: 5px;
+  display: block;
+}
+
+form fieldset #inp-estimate {
+  width: 50px;
+}
+
+form fieldset #inp-deadline,
+form fieldset #inp-priority,
+form fieldset #inp-creator,
+form fieldset #inp-color {
+  width: 150px;
 }
 
 form fieldset textarea {
@@ -189,11 +173,12 @@ form fieldset select:focus {
   outline: none;
 }
 
-form fieldset .add-new {
+form fieldset .add-new,
+form fieldset .clear-form {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  width: 50%;
+  width: 45%;
   height: 40px;
   cursor: pointer;
   border: none;
@@ -203,29 +188,206 @@ form fieldset .add-new {
   border-radius: 5px;
 }
 
+form fieldset .clear-form {
+  background-color: transparent;
+  border: 1px solid gray;
+  color: gray;
+  margin-left: 4%;
+}
+
+form fieldset #custom-color {
+  width: 30%;
+  padding: 0;
+  display: none;
+}
+
+form fieldset .error {
+  color: red;
+  margin-top: -15px;
+  margin-bottom: 20px;
+  z-index: 10;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  display: none;
+}
+
 form fieldset .add-new:disabled {
   background-color: #4b4b4b;
   color: #b8b8b8;
   cursor: default;
 }
 
-form fieldset .valid {
+form fieldset input:not([type="date"]):valid:not(:focus),
+form fieldset textarea:valid:not(:focus) {
   border: 1px solid green;
 }
 
-form fieldset .invalid {
+form fieldset input:not([type="date"]):invalid:not(:placeholder-shown):not(:focus),
+form fieldset textarea:invalid:not(:placeholder-shown):not(:focus) {
   border: 1px solid red;
 }
 
-form fieldset .error {
-  color: white;
-  margin-top: -24px;
-  margin-bottom: 20px;
-  background-color: red;
-  padding: 7px;
-  z-index: 10;
+form fieldset input:invalid:not(:placeholder-shown):not(:focus) + .error,
+form fieldset textarea:invalid:not(:placeholder-shown):not(:focus) + .error {
+  display: block;
+}
+
+form fieldset select:valid:not(:focus) + .error {
+  display: none;
+}
+
+form fieldset input:focus,
+form fieldset textarea:focus,
+form fieldset select:focus {
+  border: 1px solid grey;
+}
+
+form fieldset .default {
+  border: none;
+}
+
+form .placeholder {
+  color: #747474;
+}
+
+form .valid {
+  border: 1px solid green;
+}
+
+form .invalid {
+  border: 1px solid red;
+}
+
+.popup {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.popup .popup_content {
+  width: 50%;
+  min-height: 50%;
+  background-color: white;
+  border-radius: 5px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.popup .popup_content .popup-delete,
+.popup .popup_content .popup-close {
+  position: absolute;
+  bottom: 133px;
+  right: 30px;
+  background-color: transparent;
+  border: 1px solid black;
+  color: black;
+  height: 40px;
+  width: 100px;
+  cursor: pointer;
+  outline: none;
+  border-radius: 5px;
+}
+
+.popup .popup_content .popup-close {
+  width: 35px;
+  padding: 0;
+  margin: 0;
+  height: 35px;
+  border: none;
+  top: 30px;
+}
+
+.popup .popup_content p {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.popup .popup_content .top {
+  width: 100%;
+  height: 70%;
+  background-color: white;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding: 30px;
+  position: relative;
+}
+
+.popup .popup_content .top h2 {
+  margin-top: 0;
+  font-size: 4rem;
+  margin-bottom: 10px;
+}
+
+.popup .popup_content .top p + p {
+  margin-top: 20px;
+  font-size: 1.6rem;
+  font-style: italic;
+}
+
+.popup .popup_content .bottom {
+  width: 100%;
+  height: 30%;
+  background-color: var(--card-color);
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  display: none;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  text-align: center;
+}
+
+.popup .popup_content .bottom p {
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+.popup .popup_content .bottom p + p {
+  font-size: 1.8rem;
+  margin-bottom: 0;
+}
+
+.popup .popup_content .bottom p + p span {
+  font-size: 1.8rem;
+  margin-right: 5px;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+.popup .popup_content .bottom p + p span + span {
+  margin-right: 0;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.open_popup {
+  opacity: 1;
+  pointer-events: all;
 }
 /*# sourceMappingURL=style.css.map */
